//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  hashedPassword String [not null]
  role String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  devices devices [not null]
  token user_tokens [not null]
}

Table devices {
  id String [pk]
  fingerprint String [not null]
  userId String [not null]
  user users [not null]
  lastLoginAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  sessions sessions [not null]

  indexes {
    (fingerprint, userId) [unique]
  }
}

Table sessions {
  id String [pk]
  hashedAccessToken String [not null]
  hashedRefreshToken String [not null]
  deviceId String [not null]
  device devices [not null]
  isActive Boolean [not null, default: true]
  expiresAt DateTime [not null]
  loggedOutAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  orderLogs order_logs [not null]
}

Table user_tokens {
  id String [pk]
  userId String [not null]
  type String [not null]
  status String [not null]
  encryptedCode String [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
}

Table orders {
  id String [pk]
  status String [not null]
  date DateTime [not null]
  image String
  imageUrl String
  description String [not null]
  salePrice Decimal [not null]
  receivedPrice Decimal [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  orderLogs order_logs [not null]
}

Table order_logs {
  id String [pk]
  orderId String [not null]
  sessionId String [not null]
  session sessions [not null]
  action String [not null]
  beforeState Json
  afterState Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  order orders [not null]
}

Ref: devices.userId > users.id

Ref: sessions.deviceId > devices.id

Ref: user_tokens.userId > users.id [delete: Cascade]

Ref: order_logs.sessionId > sessions.id

Ref: order_logs.orderId > orders.id [delete: Cascade]